# language-compatibility-matrix-for-machine-translation

./: .gitignore  .npmignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  _config.yml  gemini-dataset-documentation.html  index.html  index_backup.html  language-pairs-translation-proximity.json  manus-dataset-documentation.html  package.json  perplexity-dataset-documentation.html  pyproject.toml  setup.py  test.html  visualization.js
.github/workflows/: github-pages.yml  simple-pages.yml
analysis/: DATASET_CORRECTIONS_ANALYSIS.md
components/: footer.js
data/: language-metadata.js
datasets/: README.md  index.html  language-pairs-translation-proximity-backup.json  language-pairs-translation-proximity-gemini-v1.json  language-pairs-translation-proximity-manus-v1.json  language-pairs-translation-proximity-perplexity-v1.json
docs/: DATASET_SUMMARY.md  PROMOTION.md
src/: __init__.py  language_compatibility.py
tools/: correct_scandinavian.py  publish_to_pypi.sh  simple-server.js
visualization/: gemini-dataset-documentation.html  index.html  language-pairs-translation-proximity.json  visualization.js
